# ChatBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: bot.py  config.py  database.py  keyboards.py  maintenance.py  models.py  report.py  repository.py  security.py  seed.py
app/data/: questions.example.json
app/sql/: 001_init.sql
scripts/: bot-menu.sh
